syntax = "proto3";

option go_package = "github.com/SatisfactoryServerManager/ssmcloud-resources/proto/generated";
import "models/empty.proto";
import "models/agent.proto";
import "models/user.proto";
import "models/mod.proto";

service FrontendService {
    rpc CheckUserExistsOrCreate(CheckUserExistsOrCreateRequest) returns (SSMEmpty);
    rpc GetMyUser(GetMyUserRequest) returns (GetMyUserResponse);
    rpc GetMyUserLinkedAccounts(GetMyUserLinkedAccountsRequest) returns (GetMyUserLinkedAccountsResponse);
    rpc GetMyUserActiveAccount(GetMyUserActiveAccountRequest) returns (GetMyUserActiveAccountResponse);
    rpc GetMyUserActiveAccountAgents(GetMyUserActiveAccountAgentsRequest) returns (GetMyUserActiveAccountAgentsResponse);
    rpc GetMyUserActiveAccountSingleAgent(GetMyUserActiveAccountSingleAgentRequest) returns (GetMyUserActiveAccountSingleAgentResponse);

    rpc GetAgentLog(GetAgentLogRequest) returns (GetAgentLogResponse);

    rpc GetAgentStats(GetAgentStatsRequest) returns (GetAgentStatsResponse);

    rpc CreateAgentTask(CreateAgentTaskRequest) returns (SSMEmpty);

    rpc GetAgentMods(GetAgentModsRequest) returns (GetAgentModsResponse);
    rpc InstallAgentMod(InstallAgentModRequest) returns (SSMEmpty);
    rpc UninstallAgentMod(UninstallAgentModRequest) returns (SSMEmpty);
}

message CheckUserExistsOrCreateRequest {
    string email = 1;
    string eid = 2;
    string username = 3;
}

message GetMyUserRequest {
    string eid = 1;
}

message GetMyUserResponse {
  User user = 1;
}

message GetMyUserLinkedAccountsRequest {
    string eid = 1;
}

message GetMyUserLinkedAccountsResponse {
    repeated Account linked_accounts = 1;
}

message GetMyUserActiveAccountRequest {
    string eid = 1;
}

message GetMyUserActiveAccountResponse {
    Account active_account = 1;
}

message GetMyUserActiveAccountAgentsRequest {
    string eid = 1;
}

message GetMyUserActiveAccountAgentsResponse {
    repeated Agent agents = 1;
}

message GetMyUserActiveAccountSingleAgentRequest {
    string eid = 1;
    string agent_id = 2;
}

message GetMyUserActiveAccountSingleAgentResponse {
    Agent agent = 1;
}

message GetAgentLogRequest {
    string eid = 1;
    string agent_id = 2;
    string type = 3;
    int32 last_index = 4;
}

message GetAgentLogResponse {
    AgentLog log = 1;
}

message GetAgentStatsRequest {
    string eid = 1;
    string agent_id = 2;
}

message GetAgentStatsResponse {
    repeated AgentStat stats = 1;
}

message CreateAgentTaskRequest{
    string eid = 1;
    string agent_id = 2;
    string action = 3;
}


message GetAgentModsRequest {
    string eid = 1;
    string agent_id = 2;
    int32 page = 3;
    string sort = 4;
    string direction = 5;
    string search = 6;
}

message GetAgentModsResponse {
    repeated Mod mods = 1;
    ModConfig agent_mod_config = 2;
}

message InstallAgentModRequest {
    string eid = 1;
    string agent_id = 2;
    string mod_reference = 3;
}

message UninstallAgentModRequest {
    string eid = 1;
    string agent_id = 2;
    string mod_reference = 3;
}