syntax = "proto3";

option go_package = "github.com/SatisfactoryServerManager/ssmcloud-resources/proto/generated/models";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "models/mod.proto";

message Agent{
    string id = 1;
    string agent_name = 2;
    string api_key = 3;

    AgentStatus status = 4;
    AgentConfig config = 5;
    AgentServerConfig server_config = 6;
    ModConfig mod_config = 7;

    string latest_agent_version = 10;

    repeated AgentLog logs = 11;

    repeated AgentSave saves = 12;
    repeated AgentBackup backups = 13;
    AgentMapData map_data = 14;

    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message AgentStatus{
    bool online = 1;
    bool installed = 2;
    bool running = 3;
    float cpu = 4;
    float ram = 5;
    int64 installed_sf_version = 6;
    int64 latest_sf_version = 7;
    google.protobuf.Timestamp last_comm_date = 8;
}

message AgentConfig {
    string version = 1;
    int32 port = 2;
    int64 memory = 3;
    string ip_address = 4;
    int32 backup_keep_amount = 5;
    int32 backup_interval= 6;
}

message AgentServerConfig {
    google.protobuf.BoolValue update_on_start = 1; 
    string branch = 2;
    int32 worker_threads = 3;

    google.protobuf.BoolValue auto_restart = 4; 

    int32 max_players = 5;

    google.protobuf.BoolValue auto_pause = 6;
    google.protobuf.BoolValue auto_save_on_disconnect = 7;
    int32 auto_save_interval = 8;
    google.protobuf.BoolValue disable_seasonal_events = 9;
}

message AgentLog {
    string id = 1;
    string file_name = 2;
    string type = 3;
    repeated string log_lines = 4;
    string file_url = 5;
    bool pending_upload = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message AgentStat {
    string id = 1;
    string agent_id = 2;
    google.protobuf.BoolValue running = 3;
    float cpu = 4;
    float mem = 5;
    google.protobuf.Timestamp created_at = 6;
}

message Vector3F {
    float x = 1;
    float y = 2;
    float z = 3;
}

message BoundingBox {
    Vector3F min = 1;
    Vector3F max = 2;
}

message AgentSave {
    string uuid = 1;
    string file_name = 2;
    int64 size = 3;
    string file_url = 4;
    google.protobuf.Timestamp mod_time = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message AgentBackup {
    string uuid = 1;
    string file_name = 2;
    int64 size = 3;
    string file_url = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message AgentMapDataPlayer {
    string username = 1;
    Vector3F location = 2;
    bool online = 3;
}

message AgentMapDataBuilding {
    string name = 1;
    string class = 2;
    Vector3F location = 3;
    float rotation = 4;
    BoundingBox bounding_box = 5;
}

message AgentMapData {
    repeated AgentMapDataPlayer players = 1;
    repeated AgentMapDataBuilding buildings = 2;
}